--- a/index.css
+++ b/index.css
@@ -15,7 +15,7 @@ header {
     text-align: right;
     width: 100%;
     height: 100vh;
-    background-image: url("images/banner/banner2.png");
+    background-image: url("./images/banner/banner2.png");
     background-size: cover;
 }
 
@@ -52,4 +52,94 @@ header {
     font-size: 20px;
     border: none;
     color: #FFFFFF;
+}
+
+/* First Section of Main Styling */
+
+.my-failure {
+    margin-top: 131px;
+    margin-bottom: 130px;
+}
+
+.my-failue-container {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+}
+
+.person {
+    width: 569px;
+    height: 723.3px;
+    margin-left: 206px;
+    margin-right: 87px;
+}
+
+.failure {
+    width: 416px;
+    height: 400px;
+    margin-right: 332px;
+    margin-top: 100px;
+}
+
+.failure-title {
+    font-weight: 700;
+    font-size: 40px;
+    line-height: 47px;
+    color: #151414;
+    margin-bottom: 24px;
+}
+
+.failure-description {
+    width: 416px;
+    height: 104px;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 26px;
+    color: #444343;
+    margin-bottom: 16px;
+}
+
+.lists {
+    width: 349px;
+    height: 162px;
+}
+
+.list {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 26px;
+    color: #444343;
+}
+
+.lists .list {
+    list-style-image: url("./images/icons/checkmark.png");
+}
+
+/* Extra Styling */
+
+.extra {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+    margin-bottom: 130px;
+    align-items: center;
+}
+
+.cricket-img {
+    width: 569px;
+    height: 723.3px;
+    margin-left: 206px;
+    margin-right: 87px;
+}
+
+.extra-title {
+    font-weight: 700;
+    font-size: 40px;
+    line-height: 47px;
+    color: #151414;
+    margin-bottom: 24px;
 }
