--- a/index.css
+++ b/index.css
@@ -256,3 +256,42 @@ header {
     line-height: 29px;
     color: #737272;
 }
+
+/* Linear Gradient Styling */
+
+.positive-mindset-container {
+    width: 100%;
+    margin-bottom: 130px;
+}
+
+.positive-mindset {
+    width: 60%;
+    height: 100px;
+    margin: auto;
+    padding: 130px;
+    padding-top: 50px;
+    background-image: linear-gradient(to right, rgba(55, 0, 255,1), rgba(241, 91, 34, 0)), url("images/watch.png");
+    background-blend-mode: overlay;
+    background-size: cover;
+}
+
+.positive-mindset-title {
+    /* width: 459px;
+    height: 94px; */
+    font-weight: 700;
+    font-size: 30px;
+    line-height: 47px;
+    color: #FFFFFF;
+    margin-bottom: 16px;
+}
+
+.positive-mindset-button {
+    width: 160px;
+    height: 64px;
+    background: #FFFFFF;
+    border-radius: 5px;
+    font-weight: 600;
+    font-size: 20px;
+    border: none;
+    color: #F15B22;
+}
