--- a/index.css
+++ b/index.css
@@ -270,7 +270,7 @@ header {
     margin: auto;
     padding: 130px;
     padding-top: 50px;
-    background-image: linear-gradient(to right, rgba(55, 0, 255,1), rgba(241, 91, 34, 0)), url("images/watch.png");
+    background-image: linear-gradient(to right, rgba(55, 0, 255,1), rgba(241, 91, 34, 0)), url("./images/watch.png");
     background-blend-mode: overlay;
     background-size: cover;
 }
@@ -286,6 +286,92 @@ header {
 }
 
 .positive-mindset-button {
+    width: 160px;
+    height: 64px;
+    background: #FFFFFF;
+    border-radius: 5px;
+    font-weight: 600;
+    font-size: 20px;
+    border: none;
+    color: #F15B22;
+}
+
+/* Footer Styling */
+
+footer {
+    width: 100%;
+    background: #151414;
+}
+
+.footer-container {
+    display: flex;
+    height: 660px;
+    justify-content: center;
+    align-items: center;
+    align-items: center;
+}
+
+.footer-container-child {
+    padding: 130px 230px;
+}
+
+.footer-main-title {
+    font-weight: 700;
+    font-size: 45px;
+    line-height: 53px;
+    color: #F8F8F8;
+    margin-bottom: 16px;
+}
+
+.footer-description {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 26px;
+    color: #FFFFFF;
+    margin-bottom: 24px;
+}
+
+.footer-email {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 26px;
+    color: #FFFFFF;
+    margin-bottom: 16px;
+}
+
+.footer-phone {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 26px;
+    color: #FFFFFF;
+    margin-bottom: 32px;
+}
+
+.facebook,
+.twitter {
+    margin-right: 18px;
+}
+
+.footer-sub-title {
+    font-weight: 600;
+    font-size: 25px;
+    line-height: 29px;
+    color: #FFFFFF;
+    margin-bottom: 31px;
+}
+
+.email-container {
+    width: 300px;
+    border: 1px solid #FFFFFF;
+    border-radius: 5px;
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    margin-bottom: 16px;
+    padding: 20px;
+}
+
+.btn-subscribe {
     width: 160px;
     height: 64px;
     background: #FFFFFF;
